--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Anis Sarker, artificial intelligence engineer, ai engineer, machine learning, machine learning engineer" />
   <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/inconsolata-lgc" type="text/css" />
   <title>Anis Sarker</title>
-  <link rel="shortcut icon" href="./favicons/favicon.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="./public/favicons/favicon.jpg" type="image/x-icon">
 </head>
 
 <body>
